"""
Pool model for tracking user performance in pools.

Represents a pool of users who are competing against each other.
"""

from ..db.database import Base
from sqlalchemy import Column, Integer, String, DateTime, func, ForeignKey
from sqlalchemy.orm import relationship

class Pools(Base):
    __tablename__ = "pools"

    id = Column(Integer, primary_key=True, index=True)
    name = Column(String(100), nullable=False)
    description = Column(String(255), nullable=True)
    owner_id = Column(Integer, ForeignKey("users.id"), nullable=False)
    created_at = Column(DateTime, server_default=func.now(), nullable=False)
    updated_at = Column(DateTime, server_default=func.now(), onupdate=func.now(), nullable=False)

    owner = relationship("User", back_populates="pools")
    pool_memberships = relationship("PoolMemberships", back_populates="pool")
    picks = relationship("PoolPicks", back_populates="pool")
    pool_leaderboard = relationship("PoolLeaderboard", back_populates="pool")