---
id: bbff42e3-218b-4b66-83c4-ca39ea03c7ac
---
erDiagram
    direction LR

    USERS {
        int id PK
        string email UK
        string first_name
        string last_name
        string phone_number
        string password_hash
        datetime created_at
        bool is_active
        datetime updated_at
    }

    POOLS {
        int id PK
        string name
        string description
        int owner_id FK
        datetime created_at
        datetime updated_at
    }

    POOL_LEADERBOARDS {
        int year PK
        int pool_id FK, PK
        int user_id FK, PK
        int score
        datetime updated_at
    }

    PLAYERS {
        int player_id PK
        string first_name
        string last_name
    }

    TOURNAMENTS {
        int tourn_id PK
        int org_id
        int year
        string name
        int purse
        int fedex_cup_points
        datetime start
        datetime end
        int week_number
        string format
        string status
        int current_round
        string time_zone
        int course_id
        string course_name
        string country
        string state
        string city
    }

    SCHEDULES {
        int id PK
        int year
        int org_id
        int tourn_id FK
        string name
        datetime start
        datetime end
        int week_number
        int purse
        int winners_share
    }

    EARNINGS {
        string year PK
        int tourn_id FK, PK
        int player_id FK, PK
        int earnings
        datetime timestamp
    }

    POOL_MEMBERSHIPS {
        int pool_id FK, PK
        int user_id FK, PK
        string role
        datetime joined_at
        bool is_active
    }

    POOL_PICKS {
        int id PK
        int pool_id FK
        int user_id FK
        int tournament_id FK
        int player_id FK
        int tier
        int year
        int week_number
        datetime created_at
    }

    TOURNAMENT_LEADERBOARD {
        string year PK
        int tourn_id FK, PK
        int round_id PK
        int player_id FK, PK
        string org_id
        string tourn_status
        string round_status
        datetime last_updated
        string cut_line
        string tourn_position
        string total_score
        string current_round_score
        bool round_complete
        string thru
        datetime tee_time
    }

    %% Notes:
    %% - Composite PKs now properly defined across all tables.
    %% - All FK references now correctly point to actual PKs.
    %% - TournamentLeaderboard added with composite PK on (year, tourn_id, round_id, player_id).

    USERS ||--o{ POOLS : owns
    POOLS ||--o{ POOL_LEADERBOARDS : has_scores
    USERS ||--o{ POOL_LEADERBOARDS : has_scores

    TOURNAMENTS ||--o{ SCHEDULES : defines
    PLAYERS ||--o{ EARNINGS : earns
    TOURNAMENTS ||--o{ EARNINGS : awards

    POOLS ||--o{ POOL_MEMBERSHIPS : memberships
    USERS ||--o{ POOL_MEMBERSHIPS : membership
    POOLS ||--o{ POOL_PICKS : picks
    USERS ||--o{ POOL_PICKS : user_picks
    TOURNAMENTS ||--o{ POOL_PICKS : tournament_picks
    PLAYERS ||--o{ POOL_PICKS : player_picks

    TOURNAMENTS ||--o{ TOURNAMENT_LEADERBOARD : leaderboard
    PLAYERS ||--o{ TOURNAMENT_LEADERBOARD : scored_in
